--- a/src/main/resources/com/oop/agency/home.fxml
+++ b/src/main/resources/com/oop/agency/home.fxml
@@ -2,22 +2,23 @@
 
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import io.github.palexdev.materialfx.controls.MFXScrollPane?>
 <?import io.github.palexdev.materialfx.font.MFXFontIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.agency.controller.CityController">
+<AnchorPane fx:id="rootPane" maxHeight="700.0" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.agency.controller.MainController">
    <children>
-      <GridPane prefHeight="200.0" style="-fx-background-color: #24292f;" AnchorPane.bottomAnchor="500.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane style="-fx-background-color: #24292f;" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
            <ColumnConstraints halignment="CENTER" />
            <ColumnConstraints halignment="CENTER" />
@@ -33,12 +34,12 @@
                   <Font name="Open Sans Regular" size="27.0" />
                </font>
             </Label>
-            <MFXComboBox fx:id="city_cbx" floatMode="BORDER" floatingText="Şehir" scrollOnOpen="true" selectable="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
+            <MFXComboBox fx:id="city_cbx" floatMode="BORDER" floatingText="Şehir" prefColumnCount="13" scrollOnOpen="true" selectable="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </MFXComboBox>
-            <MFXButton onAction="#loadCities" prefHeight="35.0" prefWidth="59.0" text="Ara" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+            <MFXButton onAction="#search" prefHeight="35.0" prefWidth="59.0" text="Ara" GridPane.columnIndex="2" GridPane.rowIndex="0" />
             <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="3" GridPane.hgrow="SOMETIMES">
                <children>
                   <MFXFontIcon fx:id="minimizeIcon" description="mfx-minus" size="20.0">
@@ -49,14 +50,14 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </MFXFontIcon>
-                  <MFXFontIcon fx:id="maximizeIcon" description="mfx-circle" size="20.0">
-                     <color>
-                        <Color red="0.8823529481887817" green="0.8823529481887817" blue="0.8823529481887817" />
-                     </color>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </MFXFontIcon>
+<!--                  <MFXFontIcon fx:id="maximizeIcon" description="mfx-circle" size="20.0">-->
+<!--                     <color>-->
+<!--                        <Color red="0.8823529481887817" green="0.8823529481887817" blue="0.8823529481887817" />-->
+<!--                     </color>-->
+<!--                     <cursor>-->
+<!--                        <Cursor fx:constant="HAND" />-->
+<!--                     </cursor>-->
+<!--                  </MFXFontIcon>-->
                   <MFXFontIcon fx:id="closeIcon" description="mfx-x-alt" size="20.0">
                      <color>
                         <Color red="0.8842105269432068" green="0.8842105269432068" blue="0.8842105269432068" />
@@ -72,6 +73,15 @@
             </HBox>
          </children>
       </GridPane>
-      <Pane prefHeight="200.0" style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="200.0" />
+      <MFXScrollPane style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="180.0">
+         <content>
+            <FlowPane fx:id="itemPane" alignment="CENTER" hgap="50.0" prefWidth="1100.0" vgap="50.0">
+               <padding>
+                  <Insets bottom="70.0" left="70.0" right="70.0" top="70.0" />
+               </padding>
+               <children></children>
+            </FlowPane>
+         </content>
+      </MFXScrollPane>
    </children>
 </AnchorPane>
