--- a/src/main/resources/com/oop/agency/home.fxml
+++ b/src/main/resources/com/oop/agency/home.fxml
@@ -1,87 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import io.github.palexdev.materialfx.controls.MFXButton?>
-<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
-<?import io.github.palexdev.materialfx.controls.MFXScrollPane?>
 <?import io.github.palexdev.materialfx.font.MFXFontIcon?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="rootPane" maxHeight="700.0" prefHeight="700.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.agency.controller.MainController">
    <children>
-      <GridPane style="-fx-background-color: #24292f;" AnchorPane.bottomAnchor="520.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columnConstraints>
-           <ColumnConstraints halignment="CENTER" />
-           <ColumnConstraints halignment="CENTER" />
-           <ColumnConstraints halignment="CENTER" />
-           <ColumnConstraints halignment="CENTER" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #f51251;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label alignment="TOP_LEFT" text="Seyahat Acente" textFill="#fcfcfc" GridPane.hgrow="SOMETIMES" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-               <font>
-                  <Font name="Open Sans Regular" size="27.0" />
-               </font>
-            </Label>
-            <MFXComboBox fx:id="city_cbx" floatMode="BORDER" floatingText="Şehir" prefColumnCount="13" scrollOnOpen="true" selectable="true" GridPane.columnIndex="1" GridPane.rowIndex="0">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </MFXComboBox>
-            <MFXButton onAction="#search" prefHeight="35.0" prefWidth="59.0" text="Ara" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="20.0" GridPane.columnIndex="3" GridPane.hgrow="SOMETIMES">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="49.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@static/small_logo.jpg" />
+               </image>
+            </ImageView>
+            <VBox fx:id="navBar" layoutX="63.0" layoutY="163.0" prefHeight="409.0" prefWidth="170.0" spacing="10.0">
                <children>
-                  <MFXFontIcon fx:id="minimizeIcon" description="mfx-minus" size="20.0">
-                     <color>
-                        <Color red="0.8823529481887817" green="0.8823529481887817" blue="0.8823529481887817" />
-                     </color>
+                  <MFXButton id="hotels" alignment="BASELINE_LEFT" graphicTextGap="10.0" mnemonicParsing="false" onAction="#navClick" prefHeight="40.0" prefWidth="170.0" rippleColor="#7b3030" style="-fx-background-color: #f51251;" text="Oteller" textFill="WHITESMOKE">
+                     <font>
+                        <Font name="Verdana" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="40.0" />
+                     </padding>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITESMOKE" glyphName="HOTEL" size="20" />
+                     </graphic>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
-                  </MFXFontIcon>
-<!--                  <MFXFontIcon fx:id="maximizeIcon" description="mfx-circle" size="20.0">-->
-<!--                     <color>-->
-<!--                        <Color red="0.8823529481887817" green="0.8823529481887817" blue="0.8823529481887817" />-->
-<!--                     </color>-->
-<!--                     <cursor>-->
-<!--                        <Cursor fx:constant="HAND" />-->
-<!--                     </cursor>-->
-<!--                  </MFXFontIcon>-->
-                  <MFXFontIcon fx:id="closeIcon" description="mfx-x-alt" size="20.0">
-                     <color>
-                        <Color red="0.8842105269432068" green="0.8842105269432068" blue="0.8842105269432068" />
-                     </color>
+                  </MFXButton>
+                  <MFXButton id="tours" alignment="BASELINE_LEFT" graphicTextGap="19.0" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#navClick" prefHeight="40.0" prefWidth="170.0" rippleColor="#7b3030" style="-fx-background-color: #f51251;" text="Turlar" textFill="WHITESMOKE">
+                     <font>
+                        <Font name="Verdana" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="40.0" />
+                     </padding>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITESMOKE" glyphName="PLANE" size="20" />
+                     </graphic>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
-                  </MFXFontIcon>
+                  </MFXButton>
                </children>
-               <padding>
-                  <Insets right="20.0" top="20.0" />
-               </padding>
-            </HBox>
+            </VBox>
+         </children></Pane>
+      <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0" spacing="20.0" style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <MFXFontIcon fx:id="minimizeIcon" description="mfx-minus" size="20.0">
+               <color>
+                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
+               </color>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </MFXFontIcon>
+            <MFXFontIcon fx:id="maximizeIcon" description="mfx-circle" size="20.0">
+               <color>
+                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
+               </color>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </MFXFontIcon>
+            <MFXFontIcon fx:id="closeIcon" description="mfx-x-alt" size="20.0">
+               <color>
+                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
+               </color>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </MFXFontIcon>
          </children>
-      </GridPane>
-      <MFXScrollPane style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="180.0">
-         <content>
-            <FlowPane fx:id="itemPane" alignment="CENTER" hgap="50.0" prefWidth="1100.0" vgap="50.0">
-               <padding>
-                  <Insets bottom="70.0" left="70.0" right="70.0" top="70.0" />
-               </padding>
-               <children></children>
-            </FlowPane>
-         </content>
-      </MFXScrollPane>
+         <padding>
+            <Insets right="20.0" top="20.0" />
+         </padding>
+      </HBox>
+      <StackPane fx:id="contentPane" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="320.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="70.0" />
    </children>
 </AnchorPane>
