--- a/src/main/resources/com/oop/agency/home.fxml
+++ b/src/main/resources/com/oop/agency/home.fxml
@@ -54,35 +54,71 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </MFXButton>
+                  <MFXButton id="hreserve" alignment="BASELINE_LEFT" graphicTextGap="19.0" layoutX="10.0" layoutY="60.0" mnemonicParsing="false" onAction="#navClick" prefHeight="40.0" prefWidth="170.0" rippleColor="#7b3030" style="-fx-background-color: #f51251;" text="Otel Rezervasyon" textFill="WHITESMOKE">
+                     <font>
+                        <Font name="Verdana" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="40.0" />
+                     </padding>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITESMOKE" glyphName="PAPER" size="20" />
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </MFXButton>
+                  <MFXButton id="hreserve" alignment="BASELINE_LEFT" graphicTextGap="19.0" layoutX="10.0" layoutY="111.0" mnemonicParsing="false" onAction="#navClick" prefHeight="40.0" prefWidth="170.0" rippleColor="#7b3030" style="-fx-background-color: #f51251;" text="Tur Rezervasyon" textFill="WHITESMOKE">
+                     <font>
+                        <Font name="Verdana" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="40.0" />
+                     </padding>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITESMOKE" glyphName="PAPER" size="20" />
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </MFXButton>
+                  <MFXButton alignment="BASELINE_LEFT" graphicTextGap="19.0" layoutX="10.0" layoutY="161.0" mnemonicParsing="false" onAction="#openDialog" prefHeight="40.0" prefWidth="170.0" rippleColor="#7b3030" style="-fx-background-color: #f51251;" text="Hakkında" textFill="WHITESMOKE">
+                     <font>
+                        <Font name="Verdana" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="40.0" />
+                     </padding>
+                     <graphic>
+                        <FontAwesomeIconView fill="WHITESMOKE" glyphName="INFO" size="20" />
+                     </graphic>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </MFXButton>
                </children>
             </VBox>
          </children></Pane>
       <HBox alignment="TOP_RIGHT" prefHeight="50.0" prefWidth="200.0" spacing="20.0" style="-fx-background-color: #f5f5f5;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <MFXFontIcon fx:id="minimizeIcon" description="mfx-minus" size="20.0">
-               <color>
-                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
-               </color>
+            <FontAwesomeIconView fx:id="minimizeIcon" fill="#5e5d6b" glyphName="WINDOW_MINIMIZE" size="15">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-            </MFXFontIcon>
-            <MFXFontIcon fx:id="maximizeIcon" description="mfx-circle" size="20.0">
-               <color>
-                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
-               </color>
+            </FontAwesomeIconView>
+            <FontAwesomeIconView fx:id="maximizeIcon" fill="#5e5d6b" glyphName="WINDOW_MAXIMIZE" size="15">
+               <HBox.margin>
+                  <Insets top="2.0" />
+               </HBox.margin>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-            </MFXFontIcon>
-            <MFXFontIcon fx:id="closeIcon" description="mfx-x-alt" size="20.0">
-               <color>
-                  <Color red="0.3686274588108063" green="0.364705890417099" blue="0.41960784792900085" />
-               </color>
+            </FontAwesomeIconView>
+            <FontAwesomeIconView fx:id="closeIcon" fill="#5e5d6b" glyphName="TIMES" size="20">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-            </MFXFontIcon>
+            </FontAwesomeIconView>
          </children>
          <padding>
             <Insets right="20.0" top="20.0" />
