--- a/src/main/resources/com/oop/agency/component/item.fxml
+++ b/src/main/resources/com/oop/agency/component/item.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane layoutX="550.0" layoutY="80.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" fx:controller="com.oop.agency.controller.ItemController"
+<GridPane fx:id="item_grid" layoutX="550.0" layoutY="80.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;" fx:controller="com.oop.agency.controller.ItemController"
           onMouseClicked="#itemClick" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
